@@ -27,5 +27,8 @@ if (LBANN_HAS_DISTCONV)
     "${CMAKE_CURRENT_SOURCE_DIR}/data_reader_hdf5.cpp")
 endif ()
 
+# Add the subdirectories
+add_subdirectory(utils)
+
 # Propagate the files up the tree
 set(SOURCES "${SOURCES}" "${THIS_DIR_SOURCES}" PARENT_SCOPE)
